[package]
name = "cow-utils"
version = "0.1.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
license = "MIT"
description = "Copy-on-write string utilities for Rust"
repository = "RReverser/cow-utils-rs"

[dev-dependencies]
assert_matches = "1.3.0"

[features]
default = []
nightly = []
