[package]
name = "cow-utils"
version = "0.1.3"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
license = "MIT"
description = "Copy-on-write string utilities for Rust"
repository = "https://github.com/RReverser/cow-utils-rs"
categories = ["no-std", "text-processing"]
keywords = ["string", "str", "text", "cow"]
readme = "README.md"

[dev-dependencies]
assert_matches = "1.3.0"
criterion = "0.3.1"

[[bench]]
name = "benchmark"
harness = false

[features]
default = []
nightly = []

[workspace]
members = [".", "tabgen"]
